--- a/gradle.properties
+++ b/gradle.properties
@@ -38,16 +38,17 @@ mapping_version=1.20.1
 # Must match the String constant located in the main mod class annotated with @Mod.
 mod_id=trick_weapons
 # The human-readable display name for the mod.
-mod_name=Trick Weapons 1.20.1
+mod_name=Trick Weapons
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=GPL-3.0
 # The mod version. See https://semver.org/
-mod_version=0.0.1-PRE-ALPHA
+mod_version=0.4
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
 mod_group_id=net.forixaim
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
-mod_authors=Forixaim
+mod_authors= Forixaim
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=
+mod_description= Developed by Forixaim, this project adds no items, merely a load of generic weapon capabilities to help spice up your own games.
+
