--- a/build.gradle
+++ b/build.gradle
@@ -137,6 +137,7 @@ dependencies {
     // If the group id is "net.minecraft" and the artifact id is one of ["client", "server", "joined"],
     // then special handling is done to allow a setup of a vanilla dependency without the use of an external repository.
     minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
+
     // Example mod dependency with JEI - using fg.deobf() ensures the dependency is remapped to your development mappings
     // The JEI API is declared for compile time use, while the full JEI artifact is used at runtime
     // compileOnly fg.deobf("mezz.jei:jei-${mc_version}-common-api:${jei_version}")
@@ -147,10 +148,9 @@ dependencies {
     // This maps to ./libs/coolmod-${mc_version}-${coolmod_version}.jar
     // The group id is ignored when searching -- in this case, it is "blank"
     // implementation fg.deobf("blank:coolmod-${mc_version}:${coolmod_version}")
-    compileOnly fg.deobf("curse.maven:epicfight-405076:4902504")
-    implementation fg.deobf("curse.maven:epicfight-405076:4902504")
-    compileOnly fg.deobf("curse.maven:wom-918614:4903613")
-    implementation fg.deobf("curse.maven:wom-918614:4903613")
+    implementation fg.deobf("curse.maven:epic-fight-mod-405076:4945239")
+   // implementation fg.deobf("curse.maven:wom-918614:4903613")
+    //implementation fg.deobf("curse.maven:epic-fight-impactful-945308:4931237")
     // For more info:
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
