--- a/gradle.properties
+++ b/gradle.properties
@@ -40,7 +40,7 @@ mod_id=epic_fight_battle_styles
 # The human-readable display name for the mod.
 mod_name=Epic Fight Battle Styles
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
-mod_license=GPL-3.0
+mod_license=MIT
 # The mod version. See https://semver.org/
 mod_version=0.7.1
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
@@ -48,6 +48,6 @@ mod_version=0.7.1
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
 mod_group_id=net.forixaim
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
-mod_authors=
+mod_authors= Forixaim
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=
+mod_description= Go read main page of this mod on CurseForge.
