Cleaned up the capability presets. Much less clutter.

--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,25 @@
+//buildscript {
+//    repositories {
+//        maven { url = 'https://maven.minecraftforge.net' }
+//        maven { url = "https://repo.spongepowered.org/maven" }
+//        mavenCentral()
+//    }
+//    dependencies {
+//        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '6.0.+', changing: true
+//        classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
+//    }
+//}
 
 plugins {
     id 'eclipse'
     id 'idea'
     id 'net.minecraftforge.gradle' version '[6.0,6.2)'
+//    id 'org.spongepowered.mixin' version '0.7.+' apply false
 }
+
+//apply plugin: 'net.minecraftforge.gradle'
+//apply plugin: 'org.spongepowered.mixin'
+
 
 
 group = mod_version
@@ -137,7 +153,7 @@ dependencies {
     // If the group id is "net.minecraft" and the artifact id is one of ["client", "server", "joined"],
     // then special handling is done to allow a setup of a vanilla dependency without the use of an external repository.
     minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
-
+    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
     // Example mod dependency with JEI - using fg.deobf() ensures the dependency is remapped to your development mappings
     // The JEI API is declared for compile time use, while the full JEI artifact is used at runtime
     // compileOnly fg.deobf("mezz.jei:jei-${mc_version}-common-api:${jei_version}")
@@ -156,6 +172,15 @@ dependencies {
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
 }
+
+//mixin {
+//    // MixinGradle Settings
+//    add sourceSets.main, 'mixins.mymod.refmap.json'
+//    config 'mixins.mymod.json'
+//    debug.verbose = true
+//    debug.export = true
+//    quiet
+//}
 
 // This block of code expands all declared replace properties in the specified resource targets.
 // A missing property will result in an error. Properties are expanded using ${} Groovy notation.
