--- a/build.gradle
+++ b/build.gradle
@@ -164,9 +164,8 @@ dependencies {
     // This maps to ./libs/coolmod-${mc_version}-${coolmod_version}.jar
     // The group id is ignored when searching -- in this case, it is "blank"
     // implementation fg.deobf("blank:coolmod-${mc_version}:${coolmod_version}")
-    implementation fg.deobf("curse.maven:epic-fight-mod-405076:5064418")
-    compileOnly fg.deobf("curse.maven:weapons-of-miracles-epicfight-918614:4961128")
-    runtimeOnly fg.deobf("curse.maven:weapons-of-miracles-epicfight-918614:4961128")
+    implementation fg.deobf("curse.maven:epic-fight-mod-405076:5132285")
+    implementation fg.deobf("curse.maven:weapons-of-miracles-epicfight-918614:5136295")
     // For more info:
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
