--- a/gradle.properties
+++ b/gradle.properties
@@ -9,11 +9,15 @@ minecraft_version=1.20.1
 # as they do not follow standard versioning conventions.
 minecraft_version_range=[1.20.1,1.21)
 # The Forge version must agree with the Minecraft version to get a valid artifact
-forge_version=47.2.20
+forge_version=47.2.23
 # The Forge version range can use any version of Forge as bounds or match the loader version range
 forge_version_range=[47,)
 # The loader version range can only use the major version of Forge/FML as bounds
 loader_version_range=[47,)
+
+curios_version=5.4.7+1.20.1
+mna_version=3.0.0.10
+caelus_version=3.1.0+1.20
 # The mapping channel to use for mappings.
 # The default set of supported mapping channels are ["official", "snapshot", "snapshot_nodoc", "stable", "stable_nodoc"].
 # Additional mapping channels can be registered through the "channelProviders" extension in a Gradle plugin.
@@ -44,7 +48,7 @@ mod_license=MIT
 # The mod version. See https://semver.org/
 mod_version=1.0.1
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
-# This should match the base package used for the mod sources.
+# This should match the combat_arts package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
 mod_group_id=net.forixaim
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
