--- a/build.gradle
+++ b/build.gradle
@@ -186,7 +186,7 @@ dependencies {
     implementation fg.deobf("curse.maven:epic-fight-mod-405076:5159623")
     implementation fg.deobf("curse.maven:weapons-of-miracles-epicfight-918614:5195633")
     implementation fg.deobf("curse.maven:epic-fight-impactful-945308:5151572")
-    implementation fg.deobf("libs:sword_soaring-forge1.20.1:1.11.7")
+    //implementation fg.deobf("libs:sword_soaring-forge1.20.1:1.11.7")
 
     // For more info:
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
