--- a/build.gradle
+++ b/build.gradle
@@ -180,6 +180,9 @@ dependencies {
     //Epic Fight and its addons
     implementation fg.deobf("libs:EpicFight:20.8.1.3")
     implementation fg.deobf("libs:WeaponsOfMiracles:20.1.8.1")
+    compileOnly fg.deobf("curse.maven:mekanism-268560:5395221")
+    compileOnly fg.deobf("curse.maven:draconic-evolution-223565:5524457")
+    compileOnly fg.deobf("curse.maven:projecte-226410:4901949")
     //implementation fg.deobf("libs:sword_soaring-forge1.20.1:1.11.7")
 
     // For more info:
