--- a/build.gradle
+++ b/build.gradle
@@ -104,7 +104,7 @@ minecraft {
             property 'forge.enabledGameTestNamespaces', mod_id
             property 'mixin.env.remapRefMap', 'true'
             property 'mixin.env.refMapRemappingFile', "${buildDir}/createSrgToMcp/output.srg"
-            args '-mixin.config=epic_fight_battle_styles.mixins.json'
+            args '-mixin.config=mixins.epic_fight_battle_styles.json'
         }
 
         server {
@@ -112,7 +112,7 @@ minecraft {
             args '--nogui'
             property 'mixin.env.remapRefMap', 'true'
             property 'mixin.env.refMapRemappingFile', "${buildDir}/createSrgToMcp/output.srg"
-            args '-mixin.config=epic_fight_battle_styles.mixins.json'
+            args '-mixin.config=mixins.epic_fight_battle_styles.json'
         }
 
         // This run config launches GameTestServer and runs all registered gametests, then exits.
@@ -148,6 +148,12 @@ repositories {
         }
     }
 
+    maven {
+        name = "Iron's Maven - Release"
+        url = "https://code.redspace.io/releases"
+    }
+    maven { url = "https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/" }
+
     flatDir {
          dir './libs'
     }
@@ -166,20 +172,28 @@ dependencies {
     // then special handling is done to allow a setup of a vanilla dependency without the use of an external repository.
     minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
     annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
-    // Example mod dependency with JEI - using fg.deobf() ensures the dependency is remapped to your development mappings
-    // The JEI API is declared for compile time use, while the full JEI artifact is used at runtime
-    // compileOnly fg.deobf("mezz.jei:jei-${mc_version}-common-api:${jei_version}")
-    // compileOnly fg.deobf("mezz.jei:jei-${mc_version}-forge-api:${jei_version}")
-    // runtimeOnly fg.deobf("mezz.jei:jei-${mc_version}-forge:${jei_version}")
-    compileOnly fg.deobf("curse.maven:irons-spells-n-spellbooks-855414:5240724")
+
+    //Iron's Spells and Spellbooks and It's Dependencies
+    runtimeOnly fg.deobf("curse.maven:caelus-308989:4581481")
+    runtimeOnly fg.deobf("curse.maven:playeranimator-658587:4587214")
+    compileOnly fg.deobf("io.redspace.ironsspellbooks:irons_spellbooks:${irons_spells_version}")
+    runtimeOnly fg.deobf("curse.maven:curios-309927:5266541")
+
+    // GeckoLib
+    runtimeOnly fg.deobf("curse.maven:geckolib-388172:5188427")
+
     // M&A and its API
-    // Example mod dependency using a mod jar from ./libs with a flat dir repository
-    // This maps to ./libs/coolmod-${mc_version}-${coolmod_version}.jar
-    // The group id is ignored when searching -- in this case, it is "blank"
-    // implementation fg.deobf("blank:coolmod-${mc_version}:${coolmod_version}")
     //Epic Fight and its addons
     implementation fg.deobf("libs:EpicFight:20.8.1.3")
     implementation fg.deobf("libs:WeaponsOfMiracles:20.1.8.1")
+
+    //
+    implementation fg.deobf("curse.maven:explosive-enhancement-reforged-1036246:5423875")
+
+    //Origins compatibility
+    implementation fg.deobf("curse.maven:origins-forge-474438:5314209")
+
+    //Anti Cheese
     compileOnly fg.deobf("curse.maven:mekanism-268560:5395221")
     compileOnly fg.deobf("curse.maven:draconic-evolution-223565:5524457")
     compileOnly fg.deobf("curse.maven:projecte-226410:4901949")
@@ -191,9 +205,8 @@ dependencies {
 }
 
 mixin {
-    add sourceSets.main, "${mod_id}.refmap.json"
-
-    config "${mod_id}.mixins.json"
+    add sourceSets.main, "mixins.epic_fight_battle_styles.refmap.json"
+    config "mixins.epic_fight_battle_styles.json"
 }
 
 // This block of code expands all declared replace properties in the specified resource targets.
