--- a/gradle.properties
+++ b/gradle.properties
@@ -32,10 +32,14 @@ caelus_version=3.1.0+1.20
 #
 # Parchment is an unofficial project maintained by ParchmentMC, separate from Minecraft Forge.
 # Additional setup is needed to use their mappings, see https://parchmentmc.org/docs/getting-started
-mapping_channel=official
+mapping_channel=parchment
 # The mapping version to query from the mapping channel.
 # This must match the format required by the mapping channel.
-mapping_version=1.20.1
+mapping_version=2023.09.03-1.20.1
+
+
+# Mod Compatibility patching
+irons_spells_version=1.20.1-3.1.3
 
 
 # The unique mod identifier for the mod. Must be lowercase in English locale. Must fit the regex [a-z][a-z0-9_]{1,63}
