--- a/build.gradle
+++ b/build.gradle
@@ -185,10 +185,11 @@ dependencies {
 
 
     //Epic Fight and its addons
-    implementation fg.deobf("libs:EpicFight:20.8.3")
+    implementation fg.deobf("curse.maven:epic-fight-mod-405076:5655318")
+    implementation fg.deobf("libs:BattleArtsAPI:20.9.2.5")
     implementation fg.deobf("libs:WeaponsOfMiracles:20.1.8.5")
     implementation fg.deobf("libs:EpicFightCE:20.8.1")
-    implementation fg.deobf("libs:EpicFightExCap:20.8.4")
+    implementation fg.deobf("libs:ExCap:20.9.1")
 
     //
     implementation fg.deobf("curse.maven:explosive-enhancement-reforged-1036246:5423875")
@@ -197,10 +198,10 @@ dependencies {
     implementation fg.deobf("curse.maven:origins-forge-474438:5314209")
 
     //Anti Cheese
-    compileOnly fg.deobf("curse.maven:mekanism-268560:5395221")
+    implementation fg.deobf("curse.maven:mekanism-268560:5395221")
     compileOnly fg.deobf("curse.maven:draconic-evolution-223565:5524457")
+    compileOnly fg.deobf("curse.maven:brandons-core-231382:5422013")
     compileOnly fg.deobf("curse.maven:projecte-226410:4901949")
-    //implementation fg.deobf("libs:sword_soaring-forge1.20.1:1.11.7")
 
     //Runtime Dummy
     runtimeOnly fg.deobf("curse.maven:selene-499980:5546852")
