Smoothed out with 2nd draft of autocombo and living motions

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,2 +1,6 @@
 public net.minecraft.client.Minecraft m_202354_()Z #e
 protected net.minecraft.world.EntityType$Builder <init>(Lnet/minecraft/world/entity/EntityType$EntityFactory;Lnet/minecraft/world/entity/MobCategory;)Lnet/minecraft/world/entity/EntityType$Builder; #e
+
+public yesman.epicfight.skill.guard.GuardSkill guardMotions # guardMotions
+public yesman.epicfight.skill.guard.GuardSkill advancedGuardMotions # advancedGuardMotions
+public yesman.epicfight.skill.guard.GuardSkill guardBreakMotions # guardBreakMotions
