--- a/build.gradle
+++ b/build.gradle
@@ -149,8 +149,8 @@ dependencies {
 
 
     //Epic Fight and its addons
-    implementation fg.deobf("curse.maven:epic-fight-mod-405076:5856683")
-    implementation fg.deobf("curse.maven:battle-arts-api-1091499:5843316")
+    implementation fg.deobf("curse.maven:epic-fight-mod-405076:5922122")
+    implementation fg.deobf("libs:BattleArtsAPI:20.9.4.7")
     implementation fg.deobf("libs:ExCap:20.9.4.7")
     runtimeOnly fg.deobf("curse.maven:weapons-of-miracles-epicfight-918614:5872088")
 
